--- a/content/blog/post-01/index.mdx
+++ b/content/blog/post-01/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: "My First Post"
 date: "2021-07-25"
+slug: /first-post/
 hero_image: "./Barcelona-DSC03326.jpg"
-hero_image_alt: "Tigrinho em Barcelona, Espanha"
+hero_image_alt: "Tigrinho in Barcelona, Spain"
 ---
 
 This is my first blog post! Isn't it *great*?
