--- a/content/blog/post-03/index.pt.mdx
+++ b/content/blog/post-03/index.pt.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Yet Another Post"
+title: "Mais outro post"
 slug: /post-other/
 date: "2021-09-13"
 hero_image: "./SaltLakeCity-OlimpicPark-DSC00284.jpg"
 hero_image_alt: "Tigrinho na neve no Olimpic Park em Salt Lake City, EUA."
 ---
 
-Wow look at all this content. How do they do it?
+Mais uma publicação!
