--- a/content/blog/post-02/index.mdx
+++ b/content/blog/post-02/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Another Post"
+slug: /second-post/
 date: "2021-10-15"
 hero_image: "./BuenosAires-ZooLujan-DSC_5300.jpg"
-hero_image_alt: "Tigrinho no Zoo Juan, perto de Buenos Aires, Argentina"
+hero_image_alt: "Tigrinho at Zoo Juan, near Buenos Aires, Argentina"
 ---
 
 Here's another post! It's even better than the first one!
