--- a/content/blog/post-01/index.mdx
+++ b/content/blog/post-01/index.mdx
@@ -14,3 +14,8 @@ Some of my **favorite** things are:
 * Travel
 * Movies
 * Barbecue
+
+Other image:
+![Tigrinho olhando o mapa em Salt Lake City, EUA](./SaltLakeCity-Downtown-DSC09635.jpg)
+
+Have fun!
